syntax = "proto3";
option go_package = ".;pb";
import "user/user_db.proto";

//用户登录 
message UserLoginReq {
    string account = 1;
    string password = 2;
}
//登录回应
message UserLoginResp {
    DBUser user = 1;
}